--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,4 +13,4 @@ jobs:
       - name: Run Tests
         run: go test -race -cover ./...
       - name: Build
-        run: go build ./cli
+        run: go build -o $TMPDIR/cli ./cli/
